[project]
name = "llm-tools-searxng"
version = "0.1.0"
description = "SearXNG search tool plugin for llm"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Justyn Shull"}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "httpx>=0.28.1",
    "llm>=0.26",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/justyns/llm-tools-searxng"
Changelog = "https://github.com/justyns/llm-tools-searxng/releases"
Issues = "https://github.com/justyns/llm-tools-searxng/issues"
CI = "https://github.com/justyns/llm-tools-searxng/actions"

[project.entry-points.llm]
tools_simpleeval = "llm_tools_searxng"

[project.optional-dependencies]
test = ["pytest", "llm-echo>=0.3a1"]